Fixed scrollbar on VirtualList component

--- a/packages/ui/VirtualList/UiVirtualList.module.less
+++ b/packages/ui/VirtualList/UiVirtualList.module.less
@@ -26,6 +26,12 @@
 	}
 }
 
+.virtualList {
+	/* hide native scrollbar */
+	scrollbar-width: none;
+}
+
+/* to be removed after chrome version 121 */
 .virtualList::-webkit-scrollbar {
 	display: none;
 }
